<?xml version="1.0" encoding="utf-8"?>

    <!-- 选择模式的alertdialog自定义样式-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_green"
    >

    <TextView
        android:id="@+id/tvSelectModelDialog"
        android:text="@string/select_model_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/deep_green"
        android:padding="5dp"
        android:gravity="center_horizontal"/>
    <RadioGroup
        android:id="@+id/radioGroupSelectModelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioBtnmModel_1"
            android:text="@string/model_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/model_2"
            android:id="@+id/radioBtnmModel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/model_3"
            android:id="@+id/radioBtnmModel_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/model_4"
            android:id="@+id/radioBtnmModel_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSelectModelDialogCancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/deep_green"
            android:background="#EEEEEE"
            />

        <Button
            android:id="@+id/btnSelectModelDialogConfirm"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/deep_green"
            android:background="#EEEEEE"
            />

        </LinearLayout>



</LinearLayout>
